# builder

./: .gitignore  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/builder/: command.py  interactive_shell.py  main.py  project.py  rule.py  uses.py  utils.py
tests/: test_command.py  test_interactive_shell.py  test_main.py  test_project.py  test_rule.py  test_uses.py  test_utils.py
