[project]
name = "builder"
version = "1.0.0"
description = ""
authors = [
    {name = "Antoine",email = "91411073+T0ine34@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "gamulogger (>=3.2.6,<4.0.0)"
]

[project.scripts]
builder = "builder.main:main"

[tool.poetry]
packages = [{include = "builder", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/builder",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]

[tool.coverage.run]
source = ["src/builder"]
omit = ["*/tests/*", "*/__pycache__/*", "__init__.py",  "__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
